# self_healing_agent

./: .env.example  README.md  healed_data.csv  main.py  pyproject.toml
data/: raw_inventory.csv
scripts/: check_audit.py  create_data.py
src/: agent.py  schema.py
utils/: healer.py
